--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,5 @@
 .login-form{
-    height: 400px;
+    height: auto;
     width: 400px;
     box-shadow: 0px 4px 10px rgba(0,0,0,0.3);
     margin: auto;
