--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,18 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+
+.login-form{
+    height: auto;
+    width: 400px;
+    box-shadow: 0px 4px 10px rgba(0,0,0,0.3);
+    margin: auto;
+}
+.login-page{
+    height: 100vh;
+}
+
+//.btn{
+//    background: $dark-blue;
+//}
