--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -9,6 +9,7 @@ $line-height-base: 1.6;
 // Colors
 $blue: #3490dc;
 $dark-blue:#112337;
+$dark-blue-100: #1c3758;
 $indigo: #6574cd;
 $purple: #9561e2;
 $pink: #f66d9b;
