--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,7 +17,14 @@
 .login-page{
     height: 100vh;
 }
-
+a{
+    color: white;
+    text-decoration: none;
+    &:hover{
+        color: white;
+        text-decoration: none;
+    }
+}
 //.btn{
 //    background: $dark-blue;
 //}
@@ -29,7 +36,22 @@
     left: 0;
     width: 215px;
     color: white;
+    ul{
+        list-style: none;
+        padding: 0;
+        li{
+            color: white;
+            margin-top: 10px;
+            padding: 10px 20px;
+            margin-bottom: 10px;
+            cursor: pointer;
+            &:hover{
+                background: $dark-blue-100;
+            }
+        }
+    }
 }
 .main{
     padding-left: 215px;
 }
+
